--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,11 +28,10 @@ target 'AppCenterDemo' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'appcenter', :path => '../node_modules/appcenter'
-
-  pod 'appcenter-analytics', :path => '../node_modules/appcenter-analytics'
-
-  pod 'appcenter-crashes', :path => '../node_modules/appcenter-crashes'
+   pod 'AppCenter', '~> 1.3.0'
+   pod 'AppCenter/Crashes', '~> 1.3.0'
+   pod 'AppCenter/Analytics', '~> 1.3.0'
+   pod 'AppCenterReactNativeShared', '~> 1.2.0'
 
   target 'AppCenterDemoTests' do
     inherit! :search_paths
